--- a/templates/app/about.html
+++ b/templates/app/about.html
@@ -1,9 +1,9 @@
 {% extends "app/base.html" %}
 
 {% block title %}
-    Главная страница
+    Про нас
 {% endblock %}
 
 {% block content %}
-    <h1>Главная</h1>
+    <h1>Про нас</h1>
 {% endblock %}
