--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<!navigation>
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
     <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
         <span class="fs-4">Ресторанте</span>
