--- a/templates/app/restaurant.html
+++ b/templates/app/restaurant.html
@@ -1,10 +1,14 @@
 {% extends "app/base.html" %}
 
 {% block title %}
-    Ресторан
+    Рестораны
 {% endblock %}
 
 
 {% block content %}
-    <h1>Ресторан</h1>
+
+    <h1>Рестораны</h1>
+
 {% endblock %}
+
+
