--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -10,18 +10,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 
+
 <body>
 <!navigation>
-<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+<style>
+    .navigation {
+        background: rgba(212, 211, 219, 0.6);
+        border-bottom: 1px solid rgba(12, 11, 9, 0.6);
+        transition: all 0.5s;
+        z-index: 997;
+        padding: 15px 0;
+        top: 40px;
+    }
+</style>
+
+
+<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom navigation">
     <a href="{% url 'home' %}" class="d-flex align-items-center text-dark text-decoration-none">
         <span class="fs-4">Ресторанте</span>
     </a>
-    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto ">
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Главная</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'menu' %}">Меню</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'restaurants' %}">Рестораны</a>
+
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">Про нас</a>
     </nav>
 
-    <form method="get" action={% url 'home' %}>
+    <form method="get" action={% url 'menu' %}>
         <input type="text" name="q" placeholder="Search {{ object_type_for_search }}"/>
     </form>
 </div>
