--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -37,14 +37,76 @@
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">Про нас</a>
     </nav>
 
-    <form method="get" action={% url 'menu' %}>
-        <input type="text" name="q" placeholder="Search {{ object_type_for_search }}"/>
-    </form>
+    {% block search_bar %}{% endblock %}
+
 </div>
 
 <div class="container">
     {% block content %}{% endblock %}
 </div>
+
+
+<style>
+    .footer-top {
+
+        border-top: 1px solid #37332a;
+        border-bottom: 1px solid #28251f;
+        padding: 60px 0 30px 0;
+    }
+
+
+</style>
+
+<div class="footer-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="footer-info"><h3>Restaurantly</h3>
+                    <p> A108 Adam Street <br> NY 535022, USA<br><br> <strong>Phone:</strong> +1 5589 55488 55<br>
+                        <strong>Email:</strong> info@example.com<br></p>
+                    <div class="social-links mt-3"><a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> <a
+                            href="#" class="facebook"><i class="bx bxl-facebook"></i></a> <a href="#" class="instagram"><i
+                            class="bx bxl-instagram"></i></a> <a href="#" class="google-plus"><i
+                            class="bx bxl-skype"></i></a> <a href="#" class="linkedin"><i
+                            class="bx bxl-linkedin"></i></a></div>
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-6 footer-links"><h4>Useful Links</h4>
+                <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 footer-links"><h4>Our Services</h4>
+                <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 footer-newsletter"><h4>Our Newsletter</h4>
+                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                <form action="" method="post"><input type="email" name="email"><input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <a href="#" class="back-to-top d-flex align-items-center justify-content-center active">
+            Мне наверх
+        </a>
+
+    </div>
+</div>
+
+
 </body>
+
 
 </html>
