--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -52,6 +52,7 @@
         border-top: 1px solid #37332a;
         border-bottom: 1px solid #28251f;
         padding: 60px 0 30px 0;
+        margin-top: 80px;
     }
 
 
