--- a/templates/app/dish.html
+++ b/templates/app/dish.html
@@ -1,10 +1,18 @@
 {% extends "app/base.html" %}
 
 {% block title %}
-    Блюдо
+    {{ dish_title }}
 {% endblock %}
 
 
 {% block content %}
-    <h1>Блюдо</h1>
+    <h1>{{ dish.title }}</h1>
+
+    <p> Состав:
+        {% for ingr in dish.ingredient_list.all %}
+            {{ ingr }},
+        {% endfor %}
+    </p>
+
+    <p> {{ dish.description }} </p>
 {% endblock %}
