--- a/templates/app/dish.html
+++ b/templates/app/dish.html
@@ -14,5 +14,5 @@
         {% endfor %}
     </p>
 
-    <p> {{ dish.description }} </p>
+    <p> Описание блюда: {{ dish.description }} </p>
 {% endblock %}
