--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -16,7 +16,7 @@
             accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
         <div>
             <a href="{% url 'menu' %}" class="btn-menu animate__animated animate__fadeInUp scrollto">Наше меню</a>
-            <a href="{% url 'restaurants' %}" class="btn-book animate__animated animate__fadeInUp scrollto">Наши
+            <a href="{% url 'restaurant_list' %}" class="btn-book animate__animated animate__fadeInUp scrollto">Наши
                 рестораны</a>
         </div>
 
@@ -41,7 +41,7 @@
             <h2>Delivering great food for more than 18 years!</h2>
             <div class="btns">
                 <a href="{% url 'menu' %}" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-                <a href="{% url 'restaurants' %}" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+                <a href="{% url 'restaurant_list' %}" class="btn-book animated fadeInUp scrollto">Book a Table</a>
             </div>
         </div>
 
