--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -32,7 +32,7 @@
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto ">
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'home' %}">Главная</a>
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'menu' %}">Меню</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'restaurants' %}">Рестораны</a>
+        <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'restaurant_list' %}">Рестораны</a>
 
         <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'about' %}">Про нас</a>
     </nav>
