--- a/templates/app/restaurant.html
+++ b/templates/app/restaurant.html
@@ -10,5 +10,5 @@
 
     <p> Адрес - {{ restaurant.address }} </p>
 
-    <p> Телефон {{ restaurant.phone_number }} </p>
+    <p> Телефон: {{ restaurant.phone_number }} </p>
 {% endblock %}
