--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -8,12 +8,9 @@
 
 
 {% block content %}
-    <div class="carousel-content"><h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-        <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et
-            est
-            quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse
-            doloremque
-            accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+    <div class="carousel-content">
+        <h2 class="animate__animated animate__fadeInDown">Добро пожаловать в ресторанте</h2>
+        <p class="animate__animated animate__fadeInUp">За качество отвечаем слово пацана</p>
         <div>
             <a href="{% url 'menu' %}" class="btn-menu animate__animated animate__fadeInUp scrollto">Наше меню</a>
             <a href="{% url 'restaurant_list' %}" class="btn-book animate__animated animate__fadeInUp scrollto">Наши
@@ -36,15 +33,6 @@
             }
         </style>
 
-
-        <div class="col-lg-8"><h1>Welcome to <span>Restaurantly</span></h1>
-            <h2>Delivering great food for more than 18 years!</h2>
-            <div class="btns">
-                <a href="{% url 'menu' %}" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-                <a href="{% url 'restaurant_list' %}" class="btn-book animated fadeInUp scrollto">Book a Table</a>
-            </div>
-        </div>
-
     </div>
     <style>
         .menu-filters li {
@@ -61,19 +49,6 @@
             font-family: "Playfair Display", serif;
         }
     </style>
-
-    <section id="menu">
-        <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="menu-filters">
-                <li data-filter="*" class="menu-filters">All</li>
-                <li data-filter="menu-filters">Starters</li>
-                <li data-filter=".filter-salads">Salads</li>
-                <li data-filter=".filter-specialty">Specialty</li>
-            </ul>
-        </div>
-    </section>
-
-    <h1>Рестораны</h1>
 
 
 {% endblock %}
