--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="ru">
 
@@ -8,21 +10,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/stylesheet.css' %}" type="text/css">
 </head>
 
 
 <body>
 <!navigation>
-<style>
-    .navigation {
-        background: rgba(212, 211, 219, 0.6);
-        border-bottom: 1px solid rgba(12, 11, 9, 0.6);
-        transition: all 0.5s;
-        z-index: 997;
-        padding: 15px 0;
-        top: 40px;
-    }
-</style>
+
 
 
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom navigation">
@@ -46,17 +40,7 @@
 </div>
 
 
-<style>
-    .footer-top {
 
-        border-top: 1px solid #37332a;
-        border-bottom: 1px solid #28251f;
-        padding: 60px 0 30px 0;
-        margin-top: 80px;
-    }
-
-
-</style>
 
 <div class="footer-top">
     <div class="container">
