--- a/templates/app/restaurant_list.html
+++ b/templates/app/restaurant_list.html
@@ -15,7 +15,7 @@
 
     {% for restaurant in restaurant_list %}
 
-        <div>
+        <div class="box">
             <h1>{{ restaurant.restaurant_chain.title }} на {{ restaurant.address }}</h1>
             <a href="{% url 'restaurant' %}?id={{ restaurant.pk }}">подробнее о ресторане></a>
         </div>
