--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="carousel-content">
         <h2 class="animate__animated animate__fadeInDown">Добро пожаловать в ресторанте</h2>
-        <p class="animate__animated animate__fadeInUp">За качество отвечаем слово пацана</p>
+        <p class="animate__animated animate__fadeInUp">Только вкусная еда</p>
         <div>
             <a href="{% url 'menu' %}" class="btn-menu animate__animated animate__fadeInUp scrollto">Наше меню</a>
             <a href="{% url 'restaurant_list' %}" class="btn-book animate__animated animate__fadeInUp scrollto">Наши
