--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -12,6 +12,7 @@
     border-bottom: 1px solid #28251f;
     padding: 60px 0 30px 0;
     margin-top: 80px;
+    background: rgba(212, 211, 219, 0.6);
 }
 
 .footer-top .footer-links ul li {
