--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -18,7 +18,6 @@
 <!navigation>
 
 
-
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom navigation">
     <a href="{% url 'home' %}" class="d-flex align-items-center text-dark text-decoration-none">
         <span class="fs-4">Ресторанте</span>
@@ -38,8 +37,6 @@
 <div class="container">
     {% block content %}{% endblock %}
 </div>
-
-
 
 
 <div class="footer-top">
@@ -72,10 +69,9 @@
             </div>
 
 
-
             <div class="col-lg-4 col-md-6 footer-newsletter"><h4>Подпишитесь на спам рассылку :)</h4>
                 <p>Введите свою почту (не бойтесь, все равно не работает пока что)</p>
-                <form action="" method="post"><input type="email" name="email"><input type="submit" value="Подписаться">
+                <form><input type="email" name="email"><input type="submit" value="Подписаться">
                 </form>
             </div>
         </div>
